wider homepage to prevent wrap

--- a/htdocs/static/base.css
+++ b/htdocs/static/base.css
@@ -108,7 +108,7 @@ homepage.html
 main {
   margin: 0 auto;
   padding: 0 1rem 1rem;
-  max-width: 45rem;
+  max-width: 50rem;
   position: relative;
 }
 
